; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_internal.c_intctx_free.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_internal.c_intctx_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.int_ctx = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.int_ctx*)* @intctx_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intctx_free(%struct.int_ctx* %0) #0 {
  %2 = alloca %struct.int_ctx*, align 8
  %3 = alloca %struct.int_ctx*, align 8
  store %struct.int_ctx* %0, %struct.int_ctx** %2, align 8
  %4 = load %struct.int_ctx*, %struct.int_ctx** %2, align 8
  %5 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.int_ctx*
  store %struct.int_ctx* %7, %struct.int_ctx** %3, align 8
  %8 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %9 = icmp ne %struct.int_ctx* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %12 = call i32 @px_memset(%struct.int_ctx* %11, i32 0, i32 8)
  %13 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %14 = call i32 @px_free(%struct.int_ctx* %13)
  br label %15

15:                                               ; preds = %10, %1
  %16 = load %struct.int_ctx*, %struct.int_ctx** %2, align 8
  %17 = call i32 @px_free(%struct.int_ctx* %16)
  ret void
}

declare dso_local i32 @px_memset(%struct.int_ctx*, i32, i32) #1

declare dso_local i32 @px_free(%struct.int_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
